--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.mirimapp.mirim.activities.MainActivity">
+        <activity android:name="com.mirimapp.mirim.activities.SplashActivity"
+                    android:theme="@style/notitle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.mirimapp.mirim.activities.SplashActivity"
-            android:theme="@style/notitle" />
+        <activity android:name="com.mirimapp.mirim.activities.MainActivity" />
         <activity android:name="com.mirimapp.mirim.activities.Menu1SchoolActivity" />
         <activity android:name="com.mirimapp.mirim.activities.Menu2DomitoryActivity" />
         <activity android:name="com.mirimapp.mirim.activities.Menu3BoardActivity" />
