JoinActivity.java -> SignupActivity.kt, 로직 수정 등
- activity_signup.xml : id convention 맞추기
- SignupActivity.kt : 핵심 로직 모두 완성, 네트워크 붙이고 timer만 엮으면 됨.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@
         <activity android:name="com.mirimapp.mirim.activities.Menu3BoardActivity" />
         <activity android:name="com.mirimapp.mirim.activities.Menu4MarketActivity" />
         <activity android:name="com.mirimapp.mirim.activities.Menu5MypageActivity" />
-        <activity android:name="com.mirimapp.mirim.activities.LoginActivity" />
-        <activity android:name="com.mirimapp.mirim.activities.JoinActivity" />
+        <activity android:name="com.mirimapp.mirim.activities.SigninActivity" />
+        <activity android:name="com.mirimapp.mirim.activities.SignupActivity" />
         <activity android:name="com.mirimapp.mirim.activities.M51Activity" />
         <activity android:name="com.mirimapp.mirim.activities.M52Activity" />
         <activity android:name="com.mirimapp.mirim.activities.M21Activity" />
