RecyclerView 추가, 편집, 삭제, 상세보기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity android:name="com.mirimapp.mirim.activities.M52Activity" />
         <activity android:name="com.mirimapp.mirim.activities.M21Activity" />
         <activity android:name="com.mirimapp.mirim.activities.M22Activity" />
-        <activity android:name="com.mirimapp.mirim.activities.ViewActivity"></activity>
+        <activity android:name="com.mirimapp.mirim.activities.ViewActivity" />
+        <activity android:name=".ContentviewActivity"></activity>
     </application>
 
 </manifest>
